--- a/index.css
+++ b/index.css
@@ -87,9 +87,9 @@
 }
 .symbol{
     margin: 20px;
-    outline: solid;
+    border-style:solid;
     border-radius: 2px;
-    padding: 10px;
+    padding: 5px;
 }
 .symbol:hover{
     background-color: rgb(9, 11, 9);
