--- a/index.css
+++ b/index.css
@@ -90,6 +90,7 @@
     border-style:solid;
     border-radius: 2px;
     padding: 5px;
+    margin-bottom:50px
 }
 .symbol:hover{
     background-color: rgb(9, 11, 9);
